--- a/app/client/stylesheets/main.scss
+++ b/app/client/stylesheets/main.scss
@@ -210,3 +210,4 @@
 @import "client/stylesheets/components/pu-count.sass";
 @import "client/stylesheets/components/compositions/pu-composition-tribestart.sass";
 @import "client/stylesheets/components/pu-paragraph-divider.sass";
+@import "client/stylesheets/components/compositions/pu-composition-about.sass";
