#450 Register for mobile users split in 2 steps, so that those using Facebook or LinkedIn will not see the register form

--- a/app/client/stylesheets/main.scss
+++ b/app/client/stylesheets/main.scss
@@ -216,3 +216,5 @@
 @import "client/stylesheets/components/trumbowyg.sass";
 @import "client/stylesheets/components/pu-search.sass";
 @import "client/stylesheets/components/pu-contentblock.sass";
+@import "client/stylesheets/components/pu-modal.sass";
+@import "client/stylesheets/components/pu-modal-mobile.sass";
